--- a/web.yml
+++ b/web.yml
@@ -5,7 +5,7 @@
     - vars.yml
 
   # switch user
-  become: true
+#   become: true
   become_user: root
     
 
@@ -21,26 +21,26 @@
       shell: sudo bash updateRootForMysql
 
     - name: install apache
-      become: true
+#       become: true
       apt: name=apache2 state=latest
       apt: name=apache2-doc state=latest
       apt: name=apache2-utils state=latest
 
     - name: install mysql
-      become: true
+#       become: true
       apt:
         name: mysql-server
         state: present
         update_cache: yes
 
     - name: install mysql python module
-      become: true
+#       become: true
       apt:
         name: python-mysqldb
         state: present
 
     - name: start mysql
-      become: true
+#       become: true
       sudo: yes
       service:
         name: mysql
@@ -48,12 +48,12 @@
         enabled: true
 
     - name: php install
-      become: true
+#       become: true
       apt: name=php7.0 state=present
       apt: name=php7.0-mysql state=present
 
     - name: install php model
-      become: true
+#       become: true
       apt:
         name: "{{ item }}"
         state: present
@@ -68,7 +68,7 @@
       - php-curl
 
     - name: install php extensions
-      become: true
+#       become: true
       apt:
         name: libapache2-mod-php
         state: present
@@ -76,14 +76,14 @@
         - restart apache2
 
     - name: configure owncloud
-      shell: wget https://raw.githubusercontent.com/mulinShi/key/master/configureOwncloud.yml
+      shell: wget https://raw.githubusercontent.com/yimingzenmedi/owncloud/master/owncloud_install.sh
 
     - name: run owncloud
-      shell: sudo bash configureOwncloud.yml
+      shell: sudo bash owncloud_install.sh
 
   handlers:
     - name: restart apache2
-      become: true
+#       become: true
       service:
         name: apache2
         state: restarted
