--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@
 # Packages required by the management server
 - import_playbook: common.yml
 # Create a new GCP instance
-- include: instance.yml instance_name="{{ item.name }}" instance_group="{{ item.group }}"
+- include_tasks: instance.yml instance_name="{{ item.name }}" instance_group="{{ item.group }}"
   with_items:
     name:
       - haproxy
