--- a/main.yml
+++ b/main.yml
@@ -1,19 +1,19 @@
 ---
-# Packages required by the management server
-- import_playbook: common.yml
 - name: Create instance(s)
   hosts: localhost
   tasks:
-  # Create a new GCP instance
-  - include_tasks: instance.yml instance_name="{{ item.name }}" instance_group="{{ item.group }}"
-    with_items:
-      name:
-        - haproxy
-        - server1
-        - server2
-      group:
-        - haproxy
-        - server
-        - server
-# Setup the web platform on the new instance
-- import_playbook: web.yml
+    # Packages required by the management server
+    - include_tasks: common.yml
+    # Create a new GCP instance
+    - include_tasks: instance.yml instance_name="{{ item.name }}" instance_group="{{ item.group }}"
+      with_items:
+        name:
+          - haproxy
+          - server1
+          - server2
+        group:
+          - haproxy
+          - server
+          - server
+    # Setup the web platform on the new instance
+    - include_tasks: web.yml
