--- a/main.yml
+++ b/main.yml
@@ -13,13 +13,8 @@
     # Create a new GCP instance
     - include_tasks: instance.yml instance_name="{{ item.name }}" instance_group="{{ item.group }}"
       with_items:
-        name:
-          - haproxy
-          - server1
-          - server2
-        group:
-          - haproxy
-          - server
-          - server
+        - {name: haproxy, group: haproxy}
+        - {name: server1, group: server}
+        - {name: server2, group: server}
     # Setup the web platform on the new instance
     - include_tasks: web.yml
