--- a/vars.yml
+++ b/vars.yml
@@ -11,3 +11,7 @@ instance:
   zone: "us-east1-b"
   image: "ubuntu-1604-xenial-v20180814"
 
+instances:
+  - {name: haproxy, group: haproxy}
+  - {name: server1, group: server}
+  - {name: server2, group: server}
