--- a/main.yml
+++ b/main.yml
@@ -25,4 +25,11 @@
     # Setup the web platform on the new instance
     - include_tasks: tasks/webserver.yml
       hosts: server
-    - include_tasks: tasks/loadbalance.yml
+    - include_tasks: tasks/loadbalancer.yml
+      hosts: haproxy
+    - include_tasks: tasks/database.yml
+      hosts: database
+    - include_tasks: tasks/ldap.yml
+      hosts: ldap
+    - include_tasks: tasks/backup.yml
+      hosts: backup
