--- a/main.yml
+++ b/main.yml
@@ -14,22 +14,22 @@
     # Create a new GCP instance
     - include_tasks: tasks/instance.yml instance_name="{{ instances.name }}" instance_group="{{ instances.group }}"
       with_items:
-        - {name: haproxy, group: haproxy}
-        - {name: server1, group: server}
-        - {name: server2, group: server}
+        # - {name: haproxy, group: haproxy}
+        # - {name: server1, group: server}
+        # - {name: server2, group: server}
         - {name: database, group: database}
-        - {name: backup, group: backup}
-        - {name: ldap, group: ldap}
+        # - {name: backup, group: backup}
+        # - {name: ldap, group: ldap}
       loop_control:
         loop_var: instances
     # Setup the web platform on the new instance
-    - include_tasks: tasks/webserver.yml
-      hosts: server
-    - include_tasks: tasks/loadbalancer.yml
-      hosts: haproxy
+    # - include_tasks: tasks/webserver.yml
+    #   hosts: server
+    # - include_tasks: tasks/loadbalancer.yml
+    #   hosts: haproxy
     - include_tasks: tasks/database.yml
       hosts: database
-    - include_tasks: tasks/ldap.yml
-      hosts: ldap
-    - include_tasks: tasks/backup.yml
-      hosts: backup
+    # - include_tasks: tasks/ldap.yml
+    #   hosts: ldap
+    # - include_tasks: tasks/backup.yml
+    #   hosts: backup
