--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: configure mysql password
   commond: debconf-set-selections <<< 'mysql-server mysql-server/root_password password "{{ password }}"'
 
-- name: configure mysql password
+- name: configure mysql password again
   commond: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password "{{ password }}"'
 
 - name: install mysql
