--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: configure mysql password
-  command: debconf-set-selections <<< 'mysql-server mysql-server/root_password password "{{ password }}"'
+  command: debconf-set-selections <<< 'mysql-server mysql-server/root_password password {{ password }}'
 
 - name: configure mysql password again
-  command: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password "{{ password }}"'
+  command: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password {{ password }}'
 
 - name: install mysql
   apt:
