--- a/main.yml
+++ b/main.yml
@@ -31,6 +31,12 @@
 
   roles:
     - mysql
+  tasks:
+    - name: show all the hosts matching the pattern, i.e. all but the group www
+      debug:
+        msg: "{{ item }}"
+      with_inventory_hostnames:
+        - all:!www
 
 - name: install web server software
   hosts: server
