--- a/roles/owncloud/tasks/main.yml
+++ b/roles/owncloud/tasks/main.yml
@@ -1,5 +1,36 @@
-- name: configure owncloud
-  shell: wget https://raw.githubusercontent.com/yimingzenmedi/owncloud/master/owncloud_install.sh
+# - name: configure owncloud
+#   shell: wget https://raw.githubusercontent.com/yimingzenmedi/owncloud/master/owncloud_install.sh
+- name: download owncloud
+  shell: curl https://download.owncloud.org/download/repositories/stable/Ubuntu_16.04/Release.key | sudo apt-key add -
+  
+- name: config owncloud
+  shell: echo 'deb http://download.owncloud.org/download/repositories/stable/Ubuntu_16.04/ /' | sudo tee /etc/apt/sources.list.d/owncloud.list
+
+- name: install owncloud-files
+  apt:
+    name: owncloud-files
+    update_cache: yes
+    upgrade: yes
+    
+- name: restart apache2
+  systemd:
+    name: apache2
+    state: restarted
+    
+- name: create database for owncloud
+  mysql_db：
+    name: owncloud
+    login_host: localhost
+    login_password: 123456
+    login_user: owncloud
+    
+- name: refresh db
+  shell: sql1="FLUSH PRIVILEGES"
+  
+- name: 
+  
+
+
 
 - name: Add an apt key by id from a keyserver
   apt_key:
