--- a/roles/owncloud/tasks/main.yml
+++ b/roles/owncloud/tasks/main.yml
@@ -45,6 +45,8 @@
 
 - name: set config
   shell: sed -i "8c 0 => '{{ ipify_public_ip }}'," config/config.php
+  args:
+    chdir: /var/www/owncloud
 
 # - name: create database for owncloud
 #   mysql_db：
