--- a/main.yml
+++ b/main.yml
@@ -15,9 +15,9 @@
     - include_tasks: tasks/instance.yml instance_name="{{ instances.name }}" instance_group="{{ instances.group }}"
       with_items:
         # - {name: loadbalancer, group: loadbalancer}
-        # - {name: server1, group: server}
-        # - {name: server2, group: server}
-        - {name: database, group: database}
+        - {name: server1, group: server}
+#         - {name: server2, group: server}
+#         - {name: database, group: database}
         # - {name: backup, group: backup}
         # - {name: ldap, group: ldap}
       loop_control:
