--- a/main.yml
+++ b/main.yml
@@ -17,7 +17,7 @@
         # - {name: loadbalancer, group: loadbalancer}
         - {name: server1, group: server}
 #         - {name: server2, group: server}
-#         - {name: database, group: database}
+        - {name: database, group: database}
         # - {name: backup, group: backup}
         # - {name: ldap, group: ldap}
       loop_control:
