--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -27,3 +27,10 @@
     login_host: localhost
     login_password: "{{ password }}"
     login_user: root
+
+- name: grant 
+  mysql_user:
+    user: root
+    host: all
+    priv: 'owncloud.*:ALL'
+    state: present
