--- a/tasks/instance.yml
+++ b/tasks/instance.yml
@@ -18,7 +18,7 @@
 
 - name: Create Firewall Rule w/Source Tags
   gce_net:
-    name: default
+    name: database
     fwname: "database"
     allowed: tcp:3306
     state: "present"
