--- a/tasks/instance.yml
+++ b/tasks/instance.yml
@@ -19,7 +19,9 @@
 - name: Create Firewall Rule w/Source Tags
    gce_net:
      name: default
+     project_id: "{{ project_id }}"
      credentials_file: ""
+     service_account_email: ""
      fwname: "database"
      allowed: tcp:3306
      state: "present"
