--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -38,3 +38,9 @@
 
 - name: replace
   shell: sed -i -e '43 s/^/#/' /etc/mysql/mysql.conf.d/mysqld.cnf
+  
+- name: restart mysql
+  service:
+    name: mysql
+    state: restarted
+    enabled: true
