--- a/vars.yml
+++ b/vars.yml
@@ -7,7 +7,7 @@ default_user_home: "/root"
 # configurations for new instance
 instance:
   machine_type: "n1-standard-2"
-  zone: "us-east1-b"
+  zone: "australia-southeast1-b"
   image: "ubuntu-1604-xenial-v20180814"
 
 database:
