--- a/main.yml
+++ b/main.yml
@@ -18,8 +18,8 @@
         - {name: server1, group: server}
         - {name: server2, group: server}
         - {name: database, group: database}
-        - {name: backup, group: backup}
-        - {name: ldap, group: ldap}
+        #- {name: backup, group: backup}
+        #- {name: ldap, group: ldap}
       loop_control:
         loop_var: instances
 
