--- a/vars.yml
+++ b/vars.yml
@@ -9,7 +9,7 @@ instance:
   machine_type: "n1-standard-2"
   zone: "us-east1-b"
 #  image: "ubuntu-1604-xenial-v20180814"
-  image: "ubuntu-1604-lts"
+  image: "ubuntu-1604-xenial"
   
 
 database:
